Comp issue with overflow.

--- a/themes/personal/resources/styles/components/_hero.scss
+++ b/themes/personal/resources/styles/components/_hero.scss
@@ -1,5 +1,6 @@
 .hero {
     position: relative;
+    overflow-x: hidden;
 
     &__text {
         top: 50%;
